# league_gotta_bike

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  IMPLEMENTATION_STATUS.md  PERMISSIONS_ROLES_REFACTOR.md  Procfile.tailwind  README.md  entrypoint.sh  manage.py  pyproject.toml  ruff.toml
.claude/: settings.local.json
accounts/: adapter.py  admin.py  forms.py  models.py  sms_verify.py  tests.py  urls.py  verify_phone.py  views.py
accounts/management/commands/: ensure_superuser.py
accounts/migrations/: 0001_initial.py  0002_user_avatar.py  0002_user_dob.py  0003_alter_user_phone_number.py  0004_user_phone_verified.py
accounts/templates/accounts/: _chat_rooms_section.html  _events_section.html  _organizations_section.html  home.html  profile.html
apps/: __init__.py
apps/admin_api/: __init__.py  admin.py  api.py  apps.py  auth.py  models.py  schemas.py  urls.py  views.py
apps/admin_api/routers/: tasks_router.py
apps/events/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/events/migrations/: 0001_initial.py  0002_event_view_permissions_alter_event_is_public.py
apps/membership/: admin.py  apps.py  forms.py  models.py  scheduler.py  tasks.py  urls.py  views.py
apps/membership/migrations/: 0001_initial.py  0002_add_permission_level_and_member_roles.py  0002_membership_roles.py  0003_alter_membership_options_alter_membership_status.py  0003_migrate_role_data_to_permission_level.py  0004_alter_memberrole_role_type.py  0005_alter_membership_status_season_seasonmembership_and_more.py  0006_season_auto_approve_registration_and_more.py
apps/messaging/: admin.py  consumers.py  models.py  routing.py  urls.py  views.py
apps/messaging/migrations/: 0001_initial.py  0002_chatroomparticipant_message_reply_to_chatroom_and_more.py
apps/mobile_api/: README.md  api.py  apps.py  auth.py  jwt_utils.py  schemas.py  urls.py  views.py
apps/mobile_api/routers/: __init__.py  auth_router.py  chat_router.py  events_router.py  organizations_router.py
apps/organizations/: admin.py  apps.py  forms.py  mixins.py  models.py  permissions.py  tasks.py  urls.py  views.py
apps/organizations/management/: __init__.py
apps/organizations/migrations/: 0001_initial.py  0002_alter_organization_type.py  0002_alter_organization_unique_together_and_more.py  0003_organization_membership_open.py  0003_remove_race_category.py  0004_leagueprofile_banner_teamprofile_banner.py  0004_remove_squad_focus_skill.py  0005_add_team_type.py  0005_leagueprofile_short_description_and_more.py  0006_remove_team_fields.py  0006_socialmediaaccount.py  0007_alter_socialmediaaccount_unique_together_and_more.py
apps/sponsors/: __init__.py  admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/sponsors/migrations/: 0001_initial.py  0002_sponsor_city.py  __init__.py
league_gotta_bike/: asgi.py  config.py  context_processors.py  settings.py  urls.py  wsgi.py
templates/account/: confirm_email_verification_code.html  email.html  email_confirm.html  email_verification_sent.html  inactive.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  reauthenticate.html  signup.html  verification_sent.html
templates/mfa/: activate_totp.html  authenticate.html  deactivate_totp.html  index.html  reauthenticate.html
templates/mfa/recovery_codes/: generate.html  view.html
templates/mfa/webauthn/: add.html  list.html
tests/accounts/: README.md  test_email.py  test_sms.py
theme/static_src/: package-lock.json
theme/static_src/src/: styles.css
(+38 files in other folders)
