[project]
name = "league-gotta-bike"
version = "0.1.0"
description = "App for managing bike leagues and teams"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.24",
    "channels[daphne]>=4.3.2",
    "dj-database-url>=3.1.1",
    "django>=6.0.2",
    "django-allauth[mfa]>=65.14.3",
    "django-anymail[resend]>=14.0",
    "apscheduler>=3.10.4",
    "django-htmx>=1.27.0",
    "django-ninja>=1.5.3",
    "django-phonenumber-field>=8.4.0",
    "django-push-notifications[wp]>=3.3.0",
    "django-storages[s3]>=1.14.0",
    "django-tailwind[reload, honcho]>=4.4.2",
    "django-tasks>=0.12.0",
    "logfire[asgi,django,psycopg,sqlite3]>=4.24.0",
    "phonenumbers>=9.0.24",
    "pillow>=12.1.1",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.11.0",
    "resend>=2.22.0",
    "whitenoise>=6.11.0",
    "sinch>=1.1.4",
    "django-tasks-db>=0.12.0",
]

[dependency-groups]
dev = [
    "django-browser-reload>=1.19.0",
    "django-debug-toolbar>=6.2.0",
    "django-reset-migrations>=0.4.0",
    "django-stubs>=5.2.9",
    "pytest>=9.0.1",
    "cookiecutter>=2.6.0", # needed for tailwind app
    "ruff>=0.15.1",
    "ty>=0.0.17",
    "honcho>=2.0.0",
    "logfire-mcp>=0.6.0",
]
